test/files/neg/t7872c.check
t7872c.scala:7: error: inferred kinds of the type arguments (List) do not conform to the expected kinds of the type parameters (type F).
List's type parameters do not match type F's expected parameters:
type A is covariant, but type _ is declared contravariant
  down(List(sym"whatever": Object))
  ^
t7872c.scala:7: error: type mismatch;
 found   : List[Object]
 required: F[Object]
  down(List(sym"whatever": Object))
           ^
two errors found
